--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           go-version: "1.25.1"
 
       - name: Check formatting
-        run: test -z $(go fmt ./...)
+        run: go fmt ./...
 
       - name: Run staticcheck
         run: |
